--- a/ex1.html
+++ b/ex1.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="jquery-3.3.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	<style type="text/css">
+		body{
+			background-image: linear-gradient(to right, red , yellow);
+		}
+	</style>
 	<script>
 		$(document).ready(function(){
     	$("button").click(function(){
