--- a/ex1.html
+++ b/ex1.html
@@ -18,7 +18,9 @@
 	<title>Ex1</title>
 </head>
 <body>
-	<p>ola</p>
-	<button>hide/show</button>
+	<center>
+		<p>ola</p>
+		<button>hide/show</button>
+	</center>
 </body>
 </html>
